training on single device

--- a/run_abx.ipynb
+++ b/run_abx.ipynb
@@ -20,7 +20,13 @@
    "source": [
     "context_mode = \"within\"\n",
     "speaker_mode = \"within\"\n",
-    "layers = range(5, 10)"
+    "layers = range(5, 10)\n",
+    "\n",
+    "item_file_path = (\n",
+    "    Path(\"~/zr-data/datasets/abxLS-dataset/dev-clean/phoneme-dev-clean.item\")\n",
+    "    .expanduser()\n",
+    "    .absolute()\n",
+    ")"
    ]
   },
   {
@@ -33,10 +39,11 @@
     "    output_path = Path(\n",
     "        f\"output/layer_{i}/abx_{context_mode}_{speaker_mode}_results_layer_{i}.json\"\n",
     "    )\n",
+    "    features_dir = Path(\"output/layer_{i}\").absolute()\n",
     "\n",
     "    args = zrc_abx2.EvalArgs(\n",
-    "        path_data=f\"/home/nicolvisser/repos/hubert-base-jax/output/layer_{i}\",\n",
-    "        path_item_file=\"/home/nicolvisser/zr-data/datasets/abxLS-dataset/dev-clean/phoneme-dev-clean.item\",\n",
+    "        path_data=features_dir,\n",
+    "        path_item_file=item_file_path,\n",
     "        file_extension=\".npy\",\n",
     "        feature_size=0.02,\n",
     "        cuda=False,\n",
