--- a/cluster.ipynb
+++ b/cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the features you want to cluster\n",
+    "\n",
+    "We will use the MFCCS of the `train-clean-100` set of LibriSpeech and use 500 clusters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_dir = Path(\"./data/mfcc/dev-clean\")\n",
-    "num_clusters = 500\n",
-    "output_dir = Path(\"./data/mfcc-cluster-ids/dev-clean\")"
+    "feature_dir = Path(\"/media/SSD/data/LibriSpeech/mfcc/train-clean-100\")\n",
+    "num_clusters = 100"
    ]
   },
   {
@@ -33,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2703 feature files\n"
+      "Found 28539 feature files\n"
      ]
     }
    ],
@@ -68,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "(1939016, 39)"
+       "(36205660, 39)"
       ]
      },
      "execution_count": 6,
@@ -89,9 +97,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clustering 1939016 points in 39D to 500 clusters, redo 1 times, 100 iterations\n",
-      "  Preprocessing in 0.06 s\n",
-      "  Iteration 99 (66.78 s, search 62.89 s): objective=2.3356e+09 imbalance=1.152 nsplit=0        \n"
+      "Sampling a subset of 5000000 / 36205660 for training\n",
+      "Clustering 5000000 points in 39D to 100 clusters, redo 1 times, 200 iterations\n",
+      "  Preprocessing in 1.86 s\n",
+      "  Iteration 199 (140.96 s, search 114.81 s): objective=7.66662e+09 imbalance=1.195 nsplit=0       \n"
      ]
     }
    ],
@@ -101,7 +110,7 @@
     "kmeans = faiss.Kmeans(\n",
     "    d,\n",
     "    num_clusters,\n",
-    "    niter=100,\n",
+    "    niter=200,\n",
     "    nredo=1,\n",
     "    max_points_per_centroid=50000,\n",
     "    spherical=False,\n",
@@ -110,35 +119,62 @@
     "\n",
     "kmeans.train(features)\n",
     "\n",
-    "cluster_centers = kmeans.centroids\n",
-    "\n",
-    "# Save cluster centers\n",
-    "# np.save(\"cluster_centers.npy\", cluster_centers)\n"
+    "cluster_centers = kmeans.centroids\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"/media/SSD/data/LibriSpeech/mfcc-clustered/cluster_centers_100.npy\", cluster_centers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dump the cluster indices\n",
+    "\n",
+    "We will use these as targets to train HuBERT. Therefore we need them for the full LibriSpeech dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 292367 feature files\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_dir = Path(\"/media/SSD/data/LibriSpeech/mfcc\")\n",
+    "output_dir = Path(\"/media/SSD/data/LibriSpeech/mfcc-clustered/km100-cluster-ids\")\n",
+    "\n",
+    "feature_paths = list(feature_dir.rglob(\"*.npy\"))\n",
+    "print(f\"Found {len(feature_paths)} feature files\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2703 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2703/2703 [00:02<00:00, 1056.51it/s]\n"
+      "100%|██████████| 292367/292367 [03:09<00:00, 1541.90it/s]\n"
      ]
     }
    ],
    "source": [
-    "# now do inference\n",
-    "\n",
     "for feature_path in tqdm(feature_paths):\n",
     "    features = np.load(feature_path)\n",
     "    D, I = kmeans.index.search(features, 1)\n",
